# ai-cli

./: .gitignore  Cargo.toml  README.md  build.rs  go.mod  install.sh  main.go  package.json  simple.test.ts  test_js.test.js  test_simple.ts
__tests__/: commands.test.ts  example.test.ts  history.test.ts  test_cjs.test.js  test_ok.ts
__tests__/components/: editor.test.tsx  file-explorer.test.tsx
__tests__/providers/: execute.test.ts  shell.test.ts
debian/: control
docs/: COMMANDS.md  CONFIGURATION.md  PLUGINS.md  TERMINAL_SETUP.md  THEMES.md
internal/config/: config.go
internal/providers/: providers.go
internal/tui/: tui.go
src/: app.tsx  cli.rs  commands.ts  config.rs  context.rs  history.ts  index.tsx  main.rs  theme.ts  types.ts  utils.rs
src/__tests__/: commands.test.ts  history.test.ts
src/__tests__/providers/: execute.test.ts  shell.test.ts
src/__tests__/tools/dev/: hash.test.ts  json.test.ts
src/__tests__/tools/file/: tree.test.ts
src/commands/: commit.rs  docs.rs  error.rs  explain.rs  files.ts  fix.rs  git-advanced.ts  mod.rs  network.ts  plugin.ts  refactor.rs  review-enhanced.ts  review.rs  shell.rs  sql.rs  system.ts  termux.ts  test.rs  theme.ts
src/components/: code-block.tsx  diff-viewer.tsx  editor.tsx  file-explorer.tsx  multiselect.tsx  notifications.tsx  progress.tsx  prompt.tsx  spinner.tsx  table.tsx  tool-output.tsx
src/plugins/: api.ts  loader.ts  types.ts
src/providers/: ai.ts  anthropic.rs  execute.ts  git.ts  mod.rs  nvidia.rs  ollama.rs  openai.rs  shell.ts  termux.ts
src/theme/: apply.ts  builtins.ts  index.ts
src/tools/dev/: base64.ts  convert.ts  hash.ts  json.ts  regex.ts  text.ts  uuid.ts
src/tools/file/: analyze.ts  compare.ts  search.ts  tree.ts  viewer.ts
src/tools/git/: analyze.ts  blame.ts  interactive.ts  log.ts
src/tools/network/: dns.ts  http.ts  ping.ts  port.ts  ssl.ts
src/tools/review/: context.ts  imports.ts  related.ts
src/tools/system/: info.ts  monitor.ts  process.ts
src/tools/termux/: clipboard.ts  detect.ts  setup.ts
src/tui/: app.rs  clipboard.rs  diff.rs  handler.rs  help.rs  highlight.rs  mod.rs  session.rs  theme.rs  ui.rs
templates/: commit.txt  explain.txt  fix.txt
tests/: example.test.js  example.test.mjs  test.test.ts
