[package]
name = "ai-cli"
version = "0.1.0"
edition = "2021"
description = "AI-powered CLI for code assistance - fix, explain, review, and more"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/yourusername/ai-cli"
keywords = ["ai", "cli", "code", "assistant", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ai"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Async
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Config and paths
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Git integration
git2 = "0.19"

# Syntax highlighting
syntect = "5.2"

# Terminal
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
which = "7.0"
shell-words = "1.1"
tempfile = "3.14"

[build-dependencies]
clap_complete = "4.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
