[package]
name = "ai-cli"
version = "0.1.0"
edition = "2021"
description = "AI-powered CLI for code assistance - fix, explain, review, and more"
authors = ["minimino1"]
license = "MIT"
repository = "https://github.com/minimino1/ai-cli"
keywords = ["ai", "cli", "code", "assistant", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ai"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Config and paths
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Git integration
git2 = "0.19"

# Terminal
console = "0.15"
colored = "2.1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Syntax highlighting
syntect = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
